完结 使用了websocket 集中了图表，

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -4,6 +4,7 @@ html,body,#app{
     padding: 0;
     margin: 0;
     overflow: hidden;
+    min-width: 900px;
 }
 .com-page{
     width: 100%;
@@ -14,6 +15,7 @@ html,body,#app{
     width: 100%;
     height: 100%;
     overflow: hidden;
+    position: relative;
 }
 .com-chart{
     width: 100%;
