--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,6 +6,7 @@ body,
   padding: 0;
   margin: 0;
   overflow: hidden;
+  min-width: 900px;
 }
 .com-page {
   width: 100%;
@@ -16,6 +17,7 @@ body,
   width: 100%;
   height: 100%;
   overflow: hidden;
+  position: relative;
 }
 .com-chart {
   width: 100%;
